# text-to-sql-llm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  model_peft_inference.py  model_peft_training.py  prompt_tuning.py  sql_tuning_data.jsonl  sql_tuning_data.py
src/config/: training_config.py
src/final_sql_adapter/: adapter_config.json
src/inference/: inference_engine.py
src/sql_model_results/: README.md
src/sql_model_results/checkpoint-1/: rng_state.pth  scheduler.pt  trainer_state.json
src/sql_model_results/checkpoint-2/: rng_state.pth  scheduler.pt  trainer_state.json
src/sql_model_results/checkpoint-3/: adapter_config.json  rng_state.pth  trainer_state.json
src/trainer/: prompt_tuning_trainer.py
