[project]
name = "text-to-sql-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "transformers>=5.5.4",
    "trl>=1.2.0",
]